--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="fixed w-full z-20">
       <header
         id="hdr"
-        class="container mx-auto px-[40px] lg:px-[72px] h-20 flex justify-between items-center text-white bg-black bg-transparent transition-all duration-500"
+        class="container mx-auto px-[40px] lg:px-[72px] h-20 flex justify-between items-center text-white bg-transparent transition-all duration-500"
       >
         <a href="#">
           <img src="./img/logo.svg" width="78px" height="24px" alt="logo" />
