--- a/index.html
+++ b/index.html
@@ -428,25 +428,25 @@
         >
           <button
             id="btn-1"
-            class="inline-block border-2 border-purple-700 px-4 py-3 hover:bg-purple-700 bg-purple-900"
+            class="inline-block border-2 border-purple-700 px-4 py-3 hover:bg-purple-700 active:bg-purple-950 bg-purple-900"
           >
             ITALY
           </button>
           <button
             id="btn-2"
-            class="inline-block border-2 border-purple-700 px-4 py-3 hover:bg-purple-700"
+            class="inline-block border-2 border-purple-700 px-4 py-3 active:bg-purple-950 hover:bg-purple-700"
           >
             AUSTRALIA
           </button>
           <button
             id="btn-3"
-            class="inline-block border-2 border-purple-700 px-4 py-3 hover:bg-purple-700"
+            class="inline-block border-2 border-purple-700 px-4 py-3 active:bg-purple-950 hover:bg-purple-700"
           >
             INDIA
           </button>
           <button
             id="btn-4"
-            class="inline-block border-2 border-purple-700 px-4 py-3 hover:bg-purple-700"
+            class="inline-block border-2 border-purple-700 px-4 py-3 active:bg-purple-950 hover:bg-purple-700"
           >
             BRAZIL
           </button>
@@ -483,6 +483,49 @@
         </div>
       </section>
       <!-- Photography -->
+      <!-- Forma -->
+      <section class="container mx-auto bg-black text-white px-5 2xl:px-[182px]">
+        <div class="grid md:grid-cols-2 gap-6">
+          <div class="">
+            <h2 class="pt-12">Let’s get started</h2>
+            <p class="text-[#8491A0] pt-4">
+              Now that you know a lot about me, let me know if you are interested to work with me.
+            </p>
+          </div>
+          <div class="flex flex-col pt-10">
+            <label for="name" class="">Name</label>
+            <input
+              type="text"
+              id="name"
+              class="h-12 bg-[#181823] mt-2 placeholder-gray-600 p-2.5 w-full"
+              placeholder="Name"
+              required
+            />
+            <div class="h-10 w-full"></div>
+            <label for="email" class="">Email</label>
+            <input
+              type="email"
+              id="email"
+              class="h-12 bg-[#181823] mt-2 placeholder-gray-600 p-2.5 w-full"
+              placeholder="john.doe@company.com"
+              required
+            />
+            <div class="h-10 w-full"></div>
+            <label for="message" class="">Message</label>
+            <textarea
+              id="message"
+              rows="8"
+              class="mt-2 block p-2.5 w-full min-h-12 max-h-96 bg-[#181823] placeholder-gray-600 resize-y"
+              placeholder="Write your thoughts here..."
+              required
+            ></textarea>
+            <div class="h-10 w-full"></div>
+
+            <button class="py-6 h-[75px] w-full bg-[#5221E6] uppercase">Let’s get started</button>
+          </div>
+        </div>
+      </section>
+      <!-- Forma -->
     </main>
     <script defer src="./js/script.js"></script>
   </body>
