--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a onclick="hiddenMenu()" href="#photography">Photography</a>
             </li>
             <li class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]">
-              <a onclick="hiddenMenu()" href="#">Contact</a>
+              <a onclick="hiddenMenu()" href="#Contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -53,7 +53,6 @@
         </div>
       </header>
     </div>
-
     <!-- HEADER -->
     <main>
       <!-- HERO SECTION -->
@@ -484,7 +483,7 @@
       </section>
       <!-- Photography -->
       <!-- Forma -->
-      <section class="container mx-auto bg-black text-white px-5 2xl:px-[182px]">
+      <section id="Contact" class="container mx-auto bg-black text-white px-5 2xl:px-[182px]">
         <div class="grid md:grid-cols-2 gap-6">
           <div class="">
             <h2 class="pt-12">Let’s get started</h2>
@@ -526,6 +525,86 @@
         </div>
       </section>
       <!-- Forma -->
+
+      <!-- Footer -->
+      <footer class="bg-[#181823] text-white w-full mt-12 md:h-[422px]">
+        <div
+          class="container mx-auto bg-transparent w-full h-full px-5 md:px-10 lg:px-[72px] py-12 md:py-20 flex flex-col justify-between"
+        >
+          <div
+            class="grid grid-cols-1 md:grid-cols-[1fr_140px_140px] lg:grid-cols-[1fr_200px_200px] md:gap-6"
+          >
+            <div class="mb-6">
+              <a href="#" class="block mb-8">
+                <img src="./img/logo.svg" width="130px" height="40px" alt="logo" />
+              </a>
+              <div class="flex gap-4 justify-start items-center">
+                <a href="#">
+                  <svg
+                    width="20"
+                    height="16"
+                    viewBox="0 0 20 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M20 1.87195C19.3103 2.16751 18.5222 2.36453 17.6355 2.46305C18.4236 1.97044 19.1133 1.18225 19.4089 0.295554C18.6207 0.788165 17.734 1.08373 16.8473 1.28078C16.1576 0.492599 15.0739 0 13.8916 0C11.6256 0 9.85222 1.7734 9.85222 3.94089C9.85222 4.23645 9.85222 4.53204 9.95074 4.82761C6.60099 4.63057 3.64532 3.0542 1.57636 0.689667C1.18227 1.2808 0.985222 1.97046 0.985222 2.66011C0.985222 4.03942 1.67488 5.22165 2.75862 6.00983C2.06896 6.00983 1.47783 5.81278 0.886694 5.51722C0.886694 5.51722 0.886694 5.51725 0.886694 5.61578C0.886694 7.58622 2.26601 9.16257 4.13793 9.55666C3.84236 9.65518 3.44828 9.65516 3.05419 9.65516C2.75862 9.65516 2.56158 9.65518 2.26601 9.55666C2.75862 11.133 4.23645 12.3153 6.00985 12.3153C4.63054 13.399 2.85715 13.9902 0.985222 13.9902C0.689655 13.9902 0.295567 13.9901 0 13.8916C1.7734 15.0739 3.94089 15.665 6.2069 15.665C13.5961 15.665 17.734 9.55667 17.734 4.335C17.734 4.13796 17.734 3.94091 17.734 3.84239C18.8177 3.34978 19.5074 2.66012 20 1.87195Z"
+                      fill="#26A7DE"
+                    />
+                  </svg>
+                </a>
+                <a href="#">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M12 22C6.48597 22 2 17.514 2 12C2 6.48597 6.48597 2 12 2C17.514 2 22 6.48597 22 12C22 17.514 17.514 22 12 22ZM20.4335 13.3689C20.1413 13.2766 17.7897 12.5753 15.113 13.0037C16.2302 16.0737 16.6848 18.5743 16.7723 19.0937C18.6887 17.798 20.0528 15.7455 20.4335 13.3689ZM15.3365 19.8757C15.2094 19.1263 14.7135 16.5146 13.5143 13.3984C13.4955 13.4048 13.4768 13.4109 13.458 13.4174C8.64026 15.0962 6.9108 18.4372 6.75715 18.7515C7.95695 19.687 9.38515 20.2846 10.8937 20.4823C12.4022 20.6799 13.9361 20.4705 15.3365 19.8757ZM5.65429 17.7242C5.84776 17.393 8.19196 13.5116 12.5972 12.0876C12.7085 12.0516 12.8207 12.0178 12.9337 11.9861C12.7193 11.5009 12.4858 11.0151 12.2413 10.5365C7.9757 11.8131 3.83652 11.7598 3.4628 11.7521C3.4602 11.8388 3.45845 11.9257 3.45845 12.0131C3.45681 14.1232 4.23941 16.1587 5.65429 17.7242ZM3.63888 10.2636C4.0209 10.2686 7.5401 10.2839 11.5354 9.22292C10.1202 6.70717 8.59377 4.59187 8.36861 4.28305C5.97904 5.41019 4.19273 7.61308 3.63888 10.2636ZM9.99837 3.70893C10.2345 4.02504 11.7858 6.13764 13.1855 8.70917C16.2227 7.57076 17.5086 5.84255 17.6622 5.62374C16.6338 4.7104 15.3997 4.05927 14.0653 3.72586C12.7308 3.39245 11.3356 3.38665 9.99837 3.70893ZM18.6117 6.61154C18.4316 6.85523 17.0004 8.69 13.8422 9.97938C14.0409 10.3863 14.2315 10.8001 14.4089 11.2166C14.4717 11.3642 14.5331 11.5111 14.5929 11.6574C17.435 11.3 20.2589 11.8728 20.5405 11.9323C20.5242 9.99048 19.8435 8.11277 18.6117 6.61154Z"
+                      fill="#E94B88"
+                    />
+                  </svg>
+                </a>
+                <a href="#">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M19.65 3H4.35C3.63 3 3 3.54268 3 4.2663V19.7337C3 20.4573 3.63 21 4.35 21H19.65C20.37 21 21 20.4573 21 19.7337V4.2663C21 3.63313 20.37 3 19.65 3ZM8.31 18.4673H5.61V9.87435H8.31V18.4673ZM6.96 8.608C6.06 8.608 5.43 7.88442 5.43 7.07035C5.43 6.25628 6.15 5.53265 6.96 5.53265C7.77 5.53265 8.49 6.25628 8.49 7.07035C8.58 7.97488 7.86 8.608 6.96 8.608ZM18.3 18.4673H15.6V14.3066C15.6 13.3116 15.6 12.0452 14.25 12.0452C12.9 12.0452 12.63 13.1307 12.63 14.3066V18.5578H9.93001V9.96478H12.45V11.1407C12.81 10.4171 13.71 9.78392 14.97 9.78392C17.67 9.78392 18.21 11.593 18.21 13.8543V18.4673H18.3Z"
+                      fill="#0077B5"
+                    />
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div>
+              <nav class="w-[140px] lg:w-[196px] h-[60px]"><a href="#">Home</a></nav>
+              <nav class="w-[140px] lg:w-[196px] h-[60px]"><a href="#">About</a></nav>
+              <nav class="w-[140px] lg:w-[196px] h-[60px]"><a href="#work">Work</a></nav>
+              <nav class="w-[140px] lg:w-[196px] h-[60px]"><a href="#">Process</a></nav>
+            </div>
+            <div>
+              <nav class="w-[140px] lg:w-[196px] h-[60px]"><a href="#">Store</a></nav>
+              <nav class="w-[140px] lg:w-[196px] h-[60px]"><a href="#">Blog</a></nav>
+              <nav class="w-[140px] lg:w-[196px] h-[60px]"><a href="#">Reading List</a></nav>
+            </div>
+          </div>
+          <p class="inline-block text-[#8491A0] text-[16px] pt-12">
+            Not Copyright 2024 • Robin Williams. Webflow cloneable
+          </p>
+        </div>
+      </footer>
+      <!-- Footer -->
     </main>
     <script defer src="./js/script.js"></script>
   </body>
