--- a/index.html
+++ b/index.html
@@ -28,16 +28,28 @@
           class="absolute left-full top-20 md:top-0 pb-5 md:pb-0 bg-black w-full md:h-full md:w-auto md:static md:bg-transparent transition-[left] duration-500"
         >
           <ul class="h-full flex flex-col md:flex-row items-center">
-            <li class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]">
+            <li
+              id="btn-hdr-1"
+              class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]"
+            >
               <a onclick="hiddenMenu()" href="#experience">Experience</a>
             </li>
-            <li class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]">
+            <li
+              id="btn-hdr-2"
+              class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]"
+            >
               <a onclick="hiddenMenu()" href="#work">Work</a>
             </li>
-            <li class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]">
+            <li
+              id="btn-hdr-3"
+              class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]"
+            >
               <a onclick="hiddenMenu()" href="#photography">Photography</a>
             </li>
-            <li class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]">
+            <li
+              id="btn-hdr-4"
+              class="py-3 md:py-0 px-3 lg:px-6 flex items-center h-full hover:bg-[#5221E6]"
+            >
               <a onclick="hiddenMenu()" href="#Contact">Contact</a>
             </li>
           </ul>
